# AICrawler

./: .env.example  .gitignore  .goreleaser.yaml  AGENTS.md  Dockerfile  Makefile  README.md  architecture.puml  config.yaml  go.mod  go.sum  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: release.yml
Instructions/: implementation_plan_v2.md  implementation_plan_v3.md  schema_migrations.md  weekly_synthesis_implementation_plan.md
cmd/aicrawler/: main.go
internal/cluster/: cluster.go  cluster_test.go  ward.go  ward_test.go
internal/collect/: collect.go  feed.go  newsapi.go
internal/compose/: compose.go  compose_test.go
internal/config/: config.go  config_test.go  default.yaml
internal/database/: articles.go  briefings.go  database.go  database_test.go  feedback.go  migrate.go  migrate_test.go  migrations.go  models.go  period.go  priorities.go  storylines.go  triage.go
internal/fetch/: fetch.go
internal/llm/: json.go  llm.go  llm_test.go
internal/pipeline/: pipeline.go
internal/server/: server.go  server_test.go
internal/synthesize/: synthesize.go  synthesize_test.go
internal/triage/: triage.go  triage_test.go
src/: __init__.py  api_client.py  cli.py  clusterer.py  collector.py  composer.py  content_fetcher.py  database.py  default_config.yaml  feed_parser.py  llm.py  server.py  synthesizer.py  triage.py
src/static/: style.css
templates/: briefing.html  index.html  priorities.html
tests/: conftest.py  test_clusterer.py  test_composer.py  test_database.py  test_llm.py  test_synthesizer.py  test_triage.py
(+8 files in other folders)
